--- a/index.html
+++ b/index.html
@@ -5,14 +5,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="css/style.css">
   
   <title>Newsletter sign-up form with success message</title>
 </head>
 <body>
 
   <!-- Sign-up form start -->
-
+  <div class="container">
+    <div class="image-section"></div>
+    <div class="signup-section"></div>
+  </div>
   Stay updated!
 
   Join 60,000+ product managers receiving monthly updates on:
