--- a/index.html
+++ b/index.html
@@ -14,11 +14,12 @@
   <!-- Sign-up form start -->
   <div class="container">
     <div class="image-section"></div>
-    <div class="signup-section"></div>
+    <div class="signup-section">
+      <h1>Stay updated!</h1>
+      <ul>Join 60,000+ product managers receiving monthly updates on:</ul>
+    </div>
   </div>
-  Stay updated!
 
-  Join 60,000+ product managers receiving monthly updates on:
 
   Product discovery and building what matters
   Measuring to ensure updates are a success
