Add form and button

--- a/index.html
+++ b/index.html
@@ -16,30 +16,29 @@
     <div class="image-section"></div>
     <div class="signup-section">
       <h1>Stay updated!</h1>
-      <ul>Join 60,000+ product managers receiving monthly updates on:</ul>
+      <p>Join 60,000+ product managers receiving monthly updates on:</p>
+      <ul>
+        <li>Product discovery and building what matters</li>
+        <li>Measuring to ensure updates are a success</li>
+        <li>And much more!</li>
+      </ul>
+      <form action="">
+        <label for="email-input">Email address</label><br/>
+        <input type="email" name="email-input" id="email-input" placeholder="email@company.com">
+        <button type="submit" value="submit">Subscribe to monthly newsletter</button>
+      </form>
     </div>
   </div>
-
-
-  Product discovery and building what matters
-  Measuring to ensure updates are a success
-  And much more!
-
-  Email address
-  email@company.com
-
-  Subscribe to monthly newsletter
-
   <!-- Sign-up form end -->
 
   <!-- Success message start -->
 
-  Thanks for subscribing!
+  <!-- Thanks for subscribing!
 
   A confirmation email has been sent to ash@loremcompany.com. 
   Please open it and click the button inside to confirm your subscription.
 
-  Dismiss message
+  Dismiss message -->
 
   <!-- Success message end -->
 </body>
