--- a/index.html
+++ b/index.html
@@ -33,14 +33,19 @@
   <!-- Sign-up form end -->
 
   <!-- Success message start -->
+<div class="subscribe">
+  <div class="subscribe-heading"> 
+    <img src="assets/images/icon-list.svg" alt="icon-list">
+    <h1>Thanks for subscribing!</h1>
+    <p>A confirmation email has been sent to <span>ash@loremcompany.com</span>. 
+      Please open it and click the button inside to confirm your subscription.</p>
+    </div>
+  <div class="subscribe-button">
+    <button type="reset">Dismiss message</button>
+  </div>
 
-  <!-- Thanks for subscribing!
 
-  A confirmation email has been sent to ash@loremcompany.com. 
-  Please open it and click the button inside to confirm your subscription.
-
-  Dismiss message -->
-
+</div>
   <!-- Success message end -->
 </body>
 </html>
