Fix spaces between subscribe button and text

--- a/index.html
+++ b/index.html
@@ -34,17 +34,15 @@
 
   <!-- Success message start -->
 <div class="subscribe">
-  <div class="subscribe-heading"> 
+  <div class="sub-heading">
     <img src="assets/images/icon-list.svg" alt="icon-list">
     <h1>Thanks for subscribing!</h1>
     <p>A confirmation email has been sent to <span>ash@loremcompany.com</span>. 
-      Please open it and click the button inside to confirm your subscription.</p>
-    </div>
-  <div class="subscribe-button">
-    <button type="reset">Dismiss message</button>
+      Please open it and click the button inside to confirm your subscription.
+    </p>
   </div>
-
-
+  
+  <button type="reset">Dismiss message</button>
 </div>
   <!-- Success message end -->
 </body>
