Mobile first view completed

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   <!-- Sign-up form end -->
 
   <!-- Success message start -->
-<div class="subscribe">
+<div class="subscribe secret">
   <div class="sub-heading">
     <img src="assets/images/icon-list.svg" alt="icon-list">
     <h1>Thanks for subscribing!</h1>
