--- a/index.html
+++ b/index.html
@@ -33,17 +33,16 @@
   <!-- Sign-up form end -->
 
   <!-- Success message start -->
-<div class="subscribe secret">
+<div class="subscribe">
   <div class="sub-heading">
     <img src="assets/images/icon-list.svg" alt="icon-list">
     <h1>Thanks for subscribing!</h1>
     <p>A confirmation email has been sent to <span>ash@loremcompany.com</span>. 
       Please open it and click the button inside to confirm your subscription.
     </p>
+    <button type="reset">Dismiss message</button>
   </div>
-  
-  <button type="reset">Dismiss message</button>
-</div>
+  </div>
   <!-- Success message end -->
 </body>
 </html>
