Add error msg to the label

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <li>And much more!</li>
       </ul>
       <form action="">
-        <label for="email-input">Email address</label><br/>
+        <label for="email-input">Email address</label><p class="error">Valid email required</p><br/>
         <input type="email" name="email-input" id="email-input" placeholder="email@company.com">
         <button type="submit" value="submit">Subscribe to monthly newsletter</button>
       </form>
