--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <!-- Sign-up form end -->
 
     <!-- Success message start -->
-    <div class="subscribe">
+    <div class="subscribe secret">
       <div class="sub-heading">
         <img src="assets/images/icon-list.svg" alt="icon-list" />
         <h1>Thanks for subscribing!</h1>
@@ -56,7 +56,7 @@
           <span>ash@loremcompany.com</span>. Please open it and click the button
           inside to confirm your subscription.
         </p>
-        <button type="reset">Dismiss message</button>
+        <button type="reset" id="btn2" onClick="window.location.reload();">Dismiss message</button>
       </div>
     </div>
     <!-- Success message end -->
