--- a/index.html
+++ b/index.html
@@ -18,47 +18,51 @@
   </head>
   <body>
     <!-- Sign-up form start -->
-    <div class="container">
-      <div class="image-section"></div>
-      <div class="signup-section">
-        <h1>Stay updated!</h1>
-        <p>Join 60,000+ product managers receiving monthly updates on:</p>
-        <ul>
-          <li>Product discovery and building what matters</li>
-          <li>Measuring to ensure updates are a success</li>
-          <li>And much more!</li>
-        </ul>
-        <form action="" id="form">
-          <label for="email-input">Email address</label>
-          <p class="error">Valid email required</p>
-          <br />
-          <input
-            name="email-input"
-            id="email-input"
-            placeholder="email@company.com"
-            autocomplete="off"
-          />
-          <button type="submit" value="submit" name="submit">
-            Subscribe to monthly newsletter
-          </button>
-        </form>
+    <main>
+      <div class="container">
+        <div class="image-section"></div>
+        <div class="signup-section">
+          <h1>Stay updated!</h1>
+          <p>Join 60,000+ product managers receiving monthly updates on:</p>
+          <ul>
+            <li>Product discovery and building what matters</li>
+            <li>Measuring to ensure updates are a success</li>
+            <li>And much more!</li>
+          </ul>
+          <form action="#" id="form">
+            <label for="email-input">Email address</label>
+            <p class="error">Valid email required</p>
+            <br />
+            <input
+              name="email-input"
+              id="email-input"
+              placeholder="email@company.com"
+              autocomplete="off"
+            />
+            <button type="submit" value="submit" name="submit">
+              Subscribe to monthly newsletter
+            </button>
+          </form>
+        </div>
       </div>
-    </div>
-    <!-- Sign-up form end -->
+      <!-- Sign-up form end -->
 
-    <!-- Success message start -->
-    <div class="subscribe secret">
-      <div class="sub-heading">
-        <img src="assets/images/icon-list.svg" alt="icon-list" />
-        <h1>Thanks for subscribing!</h1>
-        <p>
-          A confirmation email has been sent to
-          <span>ash@loremcompany.com</span>. Please open it and click the button
-          inside to confirm your subscription.
-        </p>
-        <button type="reset" id="btn2" onClick="window.location.reload();">Dismiss message</button>
+      <!-- Success message start -->
+      <div class="subscribe secret">
+        <div class="sub-heading">
+          <img src="assets/images/icon-list.svg" alt="icon-list" />
+          <h1>Thanks for subscribing!</h1>
+          <p>
+            A confirmation email has been sent to
+            <span>ash@loremcompany.com</span>. Please open it and click the
+            button inside to confirm your subscription.
+          </p>
+          <button type="reset" id="btn2" onClick="window.location.reload();">
+            Dismiss message
+          </button>
+        </div>
       </div>
-    </div>
+    </main>
     <!-- Success message end -->
     <script src="index.js"></script>
   </body>
